[tool.poetry]
name = "llms-for-quantitative-knowledge-retrieval"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
openml = "^0.14.1"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
argparse = "^1.4.0"
pandas = "^2.1.3"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"
openai = "^1.5.0"
missforest = "^2.4.2"
lightgbm = "^4.2.0"
seaborn = "^0.13.1"
tiktoken = "^0.5.2"
backoff = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
