[tool.poetry]
name = "quantllm"
version = "0.1.0"
description = "Use of large language models for missing data imputation and prior elicitation"
authors = ["Yuichiro Iwashita <yuichiro.iwashita@dfki.de>", "David Selby <david_antony.selby@dfki.de>", "Sergey Redyuk <sergey.redyuk@dfki.de>", "Kai Spriestersbach <kai.spriestersbach@dfki.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
openml = "^0.14.1"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
argparse = "^1.4.0"
pandas = "^2.1.3"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"
openai = "^1.5.0"
missforest = "^2.4.2"
lightgbm = "^4.2.0"
seaborn = "^0.13.1"
tiktoken = "^0.5.2"
backoff = "^2.2.1"
langchain = "^0.1.1"
langchain-openai = "^0.0.2.post1"
langchain-mistralai = "^0.0.3"
langchain-community = "^0.0.13"
langchain-experimental = "^0.0.49"
openmeteo-requests = "^1.1.0"
requests-cache = "^1.1.1"
retry-requests = "^2.0.0"
geopy = "^2.4.1"
pyro-ppl = "^1.8.6"
torch = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
