[tool.poetry]
name = "quantllm"
version = "0.1.0"
description = "Use of large language models for missing data imputation and prior elicitation"
authors = ["Yuichiro Iwashita <yuichiro.iwashita@dfki.de>", "David Selby <david_antony.selby@dfki.de>", "Sergey Redyuk <sergey.redyuk@dfki.de>", "Kai Spriestersbach <kai.spriestersbach@dfki.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "^1.3.2"
openml = "^0.14.1"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
argparse = "^1.4.0"
pandas = "^2.1.3"
python-dotenv = "^1.0.0"
openai = "^1.5.0"
missforest = "^2.4.2"
lightgbm = "^4.2.0"
seaborn = "^0.13.1"
tiktoken = "^0.5.2"
backoff = "^2.2.1"
openmeteo-requests = "^1.1.0"
requests-cache = "^1.1.1"
retry-requests = "^2.0.0"
geopy = "^2.4.1"
pyro-ppl = "^1.8.6"
torch = "^2.1.2"
scipy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
jupyter = "^1.0.0"
plotnine = "^0.12.4"
pyqt5 = "^5.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
